feat: persist configuration as JSON
